--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lucide-react": "^0.556.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "serve": "^14.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
